MDEV-23982: Mariabackup hangs on backup

MDEV-13318 introduced a condition to Mariabackup that can cause it to
hang if the server goes idle after writing a log block that has no
payload after the 12-byte header. Normal recovery in log0recv.cc would
allow blocks with exactly 12 bytes of length, and only reject blocks
where the length field is shorter than that.

(cherry-pick of commit 1066312a12023d2558eecde84739c4bbb60eb509
which has not been merged yet)